# BO4E-Schemas

./: README.md  pyproject.toml
src/bo4e_schemas/: ZusatzAttribut.json
src/bo4e_schemas/bo/: Angebot.json  Ansprechpartner.json  Ausschreibung.json  Buendelvertrag.json  Energiemenge.json  Fremdkosten.json  Geraet.json  Geschaeftsobjekt.json  Geschaeftspartner.json  Kosten.json  Lastgang.json  LastgangKompakt.json  Lokationszuordnung.json  Marktlokation.json  Marktteilnehmer.json  Messlokation.json  Netzlokation.json  Netznutzungsrechnung.json  Person.json  Preisblatt.json  PreisblattDienstleistung.json  PreisblattHardware.json  PreisblattKonzessionsabgabe.json  PreisblattMessung.json  PreisblattNetznutzung.json  Rechnung.json  Region.json  Regionaltarif.json  Standorteigenschaften.json  SteuerbareRessource.json  Tarif.json  Tarifinfo.json  Tarifkosten.json  Tarifpreisblatt.json  TechnischeRessource.json  Vertrag.json  Zaehler.json  Zeitreihe.json  _LastgangBody.json
src/bo4e_schemas/com/: Adresse.json  Angebotsposition.json  Angebotsteil.json  Angebotsvariante.json  AufAbschlag.json  AufAbschlagProOrt.json  AufAbschlagRegional.json  AufAbschlagstaffelProOrt.json  Ausschreibungsdetail.json  Ausschreibungslos.json  Betrag.json  COM.json  Dienstleistung.json  Energieherkunft.json  Energiemix.json  ExterneReferenz.json  Fremdkostenblock.json  Fremdkostenposition.json  Geokoordinaten.json  Geraet.json  Geraeteeigenschaften.json  Hardware.json  Katasteradresse.json  Konfigurationsprodukt.json  Kontaktweg.json  Konzessionsabgabe.json  Kostenblock.json  Kostenposition.json  (+41 more)
(+12 files in other folders)
