[project]
name = "BO4E-Schemas"
description = "This Repository contains all JSON-Schemas of the BO4E objects."
license = { text = "MIT" }
authors = [{ name = "Hochfrequenz Unternehmensberatung GmbH", email = "info@hochfrequenz.de" }]
keywords = ["bo4e", "schemas", "json"]

[project.urls]
Changelog = "https://github.com/Hochfrequenz/BO4E-Schemas/releases"
Homepage = "https://github.com/Hochfrequenz/BO4E-Schemas"
